Add interactive Grid View map
